--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
       <li>Go on walks</li>
       </ol>
       <h1>Dogs are the best</h1>
+      <p>She is a <a href="https://www.akc.org/dog-breeds/cavalier-king-charles-spaniel/">Cavalier King Charles</a>
   </body>
 </html>
