--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
       </ol>
       <h1>Dogs are the best</h1>
       <p>She is a <a href="https://www.akc.org/dog-breeds/cavalier-king-charles-spaniel/">Cavalier King Charles</a>
+      <p><p><a href="https://images.ctfassets.net/9l3tjzgyn9gr/photo-102011/33c608e0e6260ec468f8639540621ec9/102011-cavalier-king-charles-spaniel-tongue-out.jpg?w=1800&q=50&fm=jpg&fl=progressive">Tri Color Cavalier</a></p>
   </body>
 </html>
